# distroscript

./: AGENTS.md  IMPLEMENTATION.md  LICENSE  README.md  SPEC.md  install.yml  install_script_generator.py  installscript.py  pyproject.toml
.github/workflows/: publish.yml  python.yml
src/: distroscript.py  installscript.py  schema.json
tests/: run_tests.py  test_outputs.py
tests/inputs/: 01-package.yml  02-package-default-name.yml  03-package-type-only.yml  04-pre-post_install.yml  05-depends_on.yml  05-flags.yml  06-depends_on.yml  08-flatpak.yml  09-tarball.yml  10-github.yml  12-pip.yml  13-shell.yml  15-transitive-deps.yml  16-install-first-option.yml  17-appimage.yml
tests/outputs/fedora/: 01-package.sh  03-package-type-only.sh  04-pre-post_install.sh  05-depends_on.sh  05-flags.sh  06-depends_on.sh  07-snapd.sh  08-flatpak.sh  09-tarball.sh  10-github.sh  11-file.sh  12-pip.sh  13-shell.sh  15-transitive-deps.sh  16-install-first-option.sh  17-appimage.sh
tests/outputs/ubuntu/: 02-package-default-name.sh  03-package-type-only.sh  04-pre-post_install.sh  05-depends_on.sh  07-snapd.sh  08-flatpak.sh  09-tarball.sh  10-github.sh  11-file.sh  12-pip.sh  13-shell.sh  14-zip.sh  15-transitive-deps.sh  17-appimage.sh
